// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styled test 1 1`] = `
<Component>
  <div
    className="css-1mndwhu-Component emotion-0"
  />
</Component>
`;

exports[`Styled test 2 1`] = `
<Component>
  <div
    className="css-1scxj8d-Component emotion-0"
  />
</Component>
`;

exports[`Styled test 3 1`] = `
<Component>
  <div
    className="css-1mndwhu-Component emotion-0"
  />
</Component>
`;
